--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "uuid": "^3.3.3",
     "web3": "^1.2.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai-bignumber": "^3.0.0"
+  },
   "scripts": {
-    "test": "npm run clean-network && npm run clean && npm run reset-migrate && npm run just-test",
+    "test": "npm run clean-network && npm run clean && npm run build",
+    "build": "npm run reset-migrate && npm run just-test",
     "clean-network": "truffle networks --clean",
     "clean": "rm -rf ./client/src/contracts",
     "just-test": "truffle test --network develop",
