--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hapi/joi": "^17.0.2",
     "bootstrap": "^4.4.1",
+    "drizzle": "^1.4.0",
+    "joi-bignumber": "^13.4.0-beta.3",
     "react": "16.11.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "16.11.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "rimble-ui": "^0.11.1",
+    "styled-components": "^5.0.0",
+    "wallet-address-validator": "^0.2.4",
     "web3": "1.2.2"
   },
   "scripts": {
