--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@hapi/joi": "^17.0.2",
     "bootstrap": "^4.4.1",
     "drizzle": "^1.4.0",
+    "immutability-helper": "^3.0.1",
     "joi-bignumber": "^13.4.0-beta.3",
     "lodash": "^4.17.15",
     "react": "16.11.0",
