--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@hapi/joi": "^17.0.2",
+    "bignumber.js": "^9.0.0",
     "bootstrap": "^4.4.1",
     "drizzle": "^1.4.0",
     "immutability-helper": "^3.0.1",
@@ -12,6 +13,7 @@
     "react": "16.11.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "16.11.0",
+    "react-helmet": "^5.2.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
