--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^2.4.0",
+    "@truffle/hdwallet-provider": "^1.0.30",
     "chai": "^4.2.0",
     "truffle-assertions": "^0.9.2",
     "uuid": "^3.3.3",
